[gd_scene load_steps=34 format=2]

[ext_resource path="res://scenes/Boat/NPCBoat.gd" type="Script" id=1]
[ext_resource path="res://scenes/CannonGun/CannonGunAngle.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/CannonGun/CannonGun.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/texture/explosion/explosion02.png" type="Texture" id=4]
[ext_resource path="res://assets/texture/explosion/explosion04.png" type="Texture" id=5]
[ext_resource path="res://assets/texture/explosion/explosion06.png" type="Texture" id=6]
[ext_resource path="res://assets/texture/explosion/explosion01.png" type="Texture" id=7]
[ext_resource path="res://assets/ship/pirate_ship_sprite.png" type="Texture" id=8]
[ext_resource path="res://assets/texture/explosion/explosion07.png" type="Texture" id=9]
[ext_resource path="res://assets/texture/explosion/explosion03.png" type="Texture" id=10]
[ext_resource path="res://assets/texture/explosion/explosion08.png" type="Texture" id=11]
[ext_resource path="res://assets/texture/explosion/explosion05.png" type="Texture" id=12]
[ext_resource path="res://assets/texture/explosion/explosion00.png" type="Texture" id=13]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 192, 80, 96 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 80, 192, 80, 96 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 160, 192, 80, 96 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 240, 192, 80, 96 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 96, 80, 96 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 80, 96, 80, 96 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 160, 96, 80, 96 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 240, 96, 80, 96 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 288, 80, 96 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 80, 288, 80, 96 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 160, 288, 80, 96 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 240, 288, 80, 96 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 80, 96 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 80, 0, 80, 96 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 160, 0, 80, 96 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 240, 0, 80, 96 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "right",
"speed": 2.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "left",
"speed": 2.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "up",
"speed": 2.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "down",
"speed": 2.0
} ]

[sub_resource type="CapsuleShape2D" id=18]
radius = 21.7045
height = 73.1362

[sub_resource type="ParticlesMaterial" id=19]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="AnimatedTexture" id=20]
flags = 4
frames = 9
fps = 9.0
frame_0/texture = ExtResource( 13 )
frame_1/texture = ExtResource( 7 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 4 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 10 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 5 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 12 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 6 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 9 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 11 )
frame_8/delay_sec = 0.0

[node name="NPCBoat" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 17 )
animation = "down"

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2( -4.7045, 3.2726 )
shape = SubResource( 18 )

[node name="ParticleFire" type="Particles2D" parent="."]
scale = Vector2( 0.2, 0.2 )
emitting = false
amount = 1
lifetime = 0.5
one_shot = true
process_material = SubResource( 19 )
texture = SubResource( 20 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="CannonGunLeft" parent="." instance=ExtResource( 3 )]

[node name="CannonGunRight" parent="." instance=ExtResource( 3 )]
rotation = 3.14159

[node name="CannonGunAngle" parent="." instance=ExtResource( 2 )]
[connection signal="fire" from="CannonGunLeft" to="." method="_on_CannonGunLeft_fire"]
[connection signal="fire" from="CannonGunRight" to="." method="_on_CannonGunRight_fire"]
